force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/b3o__Identity_Verification_Yoti_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Identity Verification: Yoti Settings</label>
    <pluralLabel>Identity Verification: Yoti Settings</pluralLabel>
</CustomObject>