force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Active__c.field-meta.xml
<CustomField>
    <fullName>b3o__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>