force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Allow_Handoff__c.field-meta.xml
<CustomField>
    <fullName>b3o__Allow_Handoff__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows the relying business to enable/disable handoff functionality (normally defaults to false, but some orgs are defaulted to true in the env configs)</inlineHelpText>
    <label>Allow Handoff</label>
    <type>Checkbox</type>
</CustomField>