force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Allowed_Capture_Methods__c.field-meta.xml
<CustomField>
    <fullName>b3o__Allowed_Capture_Methods__c</fullName>
    <defaultValue>&quot;CAMERA_AND_UPLOAD&quot;</defaultValue>
    <label>Allowed Capture Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>