force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Application_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>b3o__Application_Endpoint__c</fullName>
    <defaultValue>&quot;https://api.yoti.com/idverify/v1/&quot;</defaultValue>
    <label>Application Endpoint</label>
    <type>Url</type>
</CustomField>