force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Client_SDK_ID_Key__c.field-meta.xml
<CustomField>
    <fullName>b3o__Client_SDK_ID_Key__c</fullName>
    <inlineHelpText>Obtained by 3B or Yoti</inlineHelpText>
    <label>Client SDK ID Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>