force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Client_Side_User_View_URL__c.field-meta.xml
<CustomField>
    <fullName>b3o__Client_Side_User_View_URL__c</fullName>
    <defaultValue>&quot;https://api.yoti.com/idverify/v1/web/index.html?sessionID={0}&amp;sessionToken={1}&quot;</defaultValue>
    <inlineHelpText>Client capture user view url. Param {0} = session_id, Param {1} = client_session_token</inlineHelpText>
    <label>Client Side User View URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>