force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Error_Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>b3o__Error_Callback_URL__c</fullName>
    <defaultValue>&quot;https://www.test.salesforce.com/&quot;</defaultValue>
    <inlineHelpText>Callback endpoint for success verification. Must be a public URL</inlineHelpText>
    <label>Error Callback URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>