force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Locale__c.field-meta.xml
<CustomField>
    <fullName>b3o__Locale__c</fullName>
    <defaultValue>&quot;en-GB&quot;</defaultValue>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>