force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Preset_Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>b3o__Preset_Issuing_Country__c</fullName>
    <defaultValue>&quot;GBR&quot;</defaultValue>
    <label>Preset Issuing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>