force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>b3o__Primary_Color__c</fullName>
    <defaultValue>&quot;#00ca72&quot;</defaultValue>
    <inlineHelpText>pattern: ^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$
example: #2d9fff</inlineHelpText>
    <label>Primary Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>