force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Privacy_Policy_URL__c.field-meta.xml
<CustomField>
    <fullName>b3o__Privacy_Policy_URL__c</fullName>
    <inlineHelpText>Company privacy policy, must be HTTPS</inlineHelpText>
    <label>Privacy Policy URL</label>
    <type>Url</type>
</CustomField>