force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Private_Key__c.field-meta.xml
<CustomField>
    <fullName>b3o__Private_Key__c</fullName>
    <inlineHelpText>RSA key obtained by 3B or Yoti</inlineHelpText>
    <label>Private Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>