force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Requested_Checks__c.field-meta.xml
<CustomField>
    <fullName>b3o__Requested_Checks__c</fullName>
    <description>[{&quot;type&quot;: &quot;ID_DOCUMENT_AUTHENTICITY&quot;,&quot;config&quot;: {&quot;manual_check&quot;: &quot;FALLBACK&quot;}},
{&quot;type&quot;: &quot;LIVENESS&quot;,&quot;config&quot;: {&quot;liveness_type&quot;: &quot;ZOOM&quot;,&quot;max_retries&quot;: 1}},
{&quot;type&quot;: &quot;ID_DOCUMENT_FACE_MATCH&quot;,&quot;config&quot;: {&quot;manual_check&quot;: &quot;FALLBACK&quot;}}]</description>
    <inlineHelpText>What checks are requested? In JSON format.</inlineHelpText>
    <label>Requested Checks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>