force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Requested_Tasks__c.field-meta.xml
<CustomField>
    <fullName>b3o__Requested_Tasks__c</fullName>
    <description>{&quot;type&quot;: &quot;ID_DOCUMENT_TEXT_DATA_EXTRACTION&quot;,&quot;config&quot;: {&quot;manual_check&quot;: &quot;FALLBACK&quot;,&quot;chip_data&quot;: &quot;DESIRED&quot;}}</description>
    <label>Requested Tasks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>