force-app/main/default/objects/b3o__Identity_Verification_Yoti_Settings__mdt/fields/b3o__Results_Callback__c.field-meta.xml
<CustomField>
    <fullName>b3o__Results_Callback__c</fullName>
    <defaultValue>&quot;{PUBLIC_SITE}/services/apexrest/b3o/IV_Yoti_Client/v1/results&quot;</defaultValue>
    <label>Results Callback</label>
    <type>Url</type>
</CustomField>